<resources>
    <string name="ContactSearch">Contacts</string>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="SetupSocialNetworksSubTitle">To see more info &amp; pictures - add <u>all</u>" your
social networks - even if you don't use them"</string>
    <string name="_14_days">14 Days</string>
    <string name="_2_days">2 days</string>
    <string name="_30_days">30 Days</string>
    <string name="_s_s_details">"Send %s's Details"</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_all_rights_reserved">"© 2012 – 2021 CallApp.
All rights reserved."</string>
    <string name="about_terms">Terms of service</string>
    <string name="about_version">Version %s</string>
    <string name="accept">Accept</string>
    <string name="accessibility_service_description">CallApp</string>
    <string name="accessibility_service_dialog_message">In order to ensure that all of your calls are recorded without issues, we need accessibility permissions from you. CallApp needs Accessibility Services so that you or users with issues will be able to record calls and replay them afterward.</string>
    <string name="accessibility_service_dialog_reenable_message">Oops it looks like something went wrong, please enable permission to Accessibility again</string>
    <string name="accessibility_service_dialog_reenable_title">Issue detected</string>
    <string name="accessibility_service_dialog_step1">Step 1</string>
    <string name="accessibility_service_dialog_step2">Step 2</string>
    <string name="accessibility_service_dialog_title">Ensure your recordings!</string>
    <string name="accessibility_service_label">CallApp</string>
    <string name="account_verifiy">Account verified</string>
    <string name="action_add_to_favorites_caption">Add to favorites</string>
    <string name="action_block_call_caption">Block</string>
    <string name="action_blockunblock_block_failed">Failed to block %s</string>
    <string name="action_blockunblock_block_success">%s is now blocked</string>
    <string name="action_blockunblock_unblock_failed">Failed to unblock %s</string>
    <string name="action_blockunblock_unblock_success">%s is now unblocked</string>
    <string name="action_call_caption">Call</string>
    <string name="action_contact_call_log_action_caption">Call history</string>
    <string name="action_copy_code_caption">Copy code</string>
    <string name="action_copy_number_caption">Copy number</string>
    <string name="action_create_contact_caption">Create contact</string>
    <string name="action_delete_call_recording">Delete recording</string>
    <string name="action_delete_call_reminder_caption">Delete call reminder</string>
    <string name="action_delete_contact_caption">Delete</string>
    <string name="action_delete_number_name">Remove number</string>
    <string name="action_edit_blocked_item_caption">Edit</string>
    <string name="action_edit_contact_caption">Edit</string>
    <string name="action_edit_note_caption">Edit note</string>
    <string name="action_error_no_valid_phone">"Can't send message to '%s', contact has no valid phone number"</string>
    <string name="action_exclude_analytics">No Insights</string>
    <string name="action_invite_caption">Invite</string>
    <string name="action_invite_contact_button_text">Invite %s via SMS</string>
    <string name="action_reminder_event_location">%s</string>
    <string name="action_reminder_event_title" formatted="false">%s %s</string>
    <string name="action_reminder_with_calendar_caption">With Calendar</string>
    <string name="action_reminder_with_callapp_caption">With Callapp</string>
    <string name="action_remove_from_call_log_caption">Remove from call-log</string>
    <string name="action_remove_from_favorites_caption">Remove from favorites</string>
    <string name="action_select_sim_caption">Select Sim</string>
    <string name="action_select_sim_sub_caption">Select the default SIM card for this specific contact</string>
    <string name="action_send_contact_details">Send Contact to %s</string>
    <string name="action_send_sms_caption">Send SMS</string>
    <string name="action_set_meeting_caption">Meeting</string>
    <string name="action_set_meeting_dialog_title">Select Email:</string>
    <string name="action_set_meeting_location">"%s's office"</string>
    <string name="action_set_meeting_me_with_other" formatted="false">%s &amp; %s</string>
    <string name="action_set_meeting_with_other">Meeting with %s</string>
    <string name="action_share_call_record">"Check out this recorded call I took with CallApp's call recorder! www.%s/d"</string>
    <string name="action_share_contact_cannot_share">You need phone number or Email to share info</string>
    <string name="action_share_contact_current_to_other">"Send %s's details to a contact"</string>
    <string name="action_share_contact_fallback">shared via CallApp. Get it free</string>
    <string name="action_share_contact_no_details">This contact has no details to share</string>
    <string name="action_share_contact_option_share_my_own">Send my contact details</string>
    <string name="action_share_contact_option_share_others">"Send a contact's details"</string>
    <string name="action_share_details_caption">Share</string>
    <string name="action_share_location_caption">Location</string>
    <string name="action_share_location_enable_gps">Enable GPS to share your location with %s</string>
    <string name="action_share_location_failed_get_location">"Couldn't obtain %s location"</string>
    <string name="action_share_location_failed_your">your</string>
    <string name="action_share_location_fallback" formatted="false">My current location is: %s %s</string>
    <string name="action_share_location_gps_settings_button">GPS settings</string>
    <string name="action_share_photo_caption">Gallery</string>
    <string name="action_share_photo_error">Could not upload photo</string>
    <string name="action_share_photo_fallback" formatted="false">Check out this photo %s %s</string>
    <string name="action_share_photo_unknown_error">Photo sharing failed</string>
    <string name="action_share_photo_uploading">Uploading photo…</string>
    <string name="action_show_missed_call_reminder">Show missed call reminders</string>
    <string name="action_snap_photo_caption">Photo</string>
    <string name="action_snap_photo_failure">"Couldn't upload photo"</string>
    <string name="action_snap_photo_uploading">Uploading photo…</string>
    <string name="action_spam_caption">Spam</string>
    <string name="action_un_exclude_analytics">Show Insights</string>
    <string name="action_unblock_call_caption">Unblock</string>
    <string name="action_unspam_caption">Unspam</string>
    <string name="ad">Ad</string>
    <string name="add">Add</string>
    <string name="are_you_sure">are you sure you want to reassign</string>
    <string name="audioroute_headset">Wired headset</string>
    <string name="audioroute_phone">Phone</string>
    <string name="backup_as_scheduled">Backup as scheduled</string>
    <string name="backup_files">Backup Files</string>
    <string name="backup_now">Backup now</string>
    <string name="backup_period">Backup Period</string>
    <string name="backup_setup">Backup Setup</string>
    <string name="backup_will_start_soon">Backup will start soon</string>
    <string name="call_history">Call History</string>
    <string name="call_recordings">Call Recordings</string>
    <string name="can_share">"Assign a contact to share your Video Ringtone preview with.
 Once you're done, you can continue to share special previews with the rest of your contacts!"</string>
    <string name="can_share_friends">or with <b>your friends and members</b></string>
    <string name="can_share_now">Share previews with your contacts!</string>
    <string name="cancel">Cancel</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="contact_already_assigned">Contact already assigned</string>
    <string name="contacts">Contacts</string>
    <string name="dismiss_button_content_description">Dismiss</string>
    <string name="doneAllCaps">DONE</string>
    <string name="dropbox">DropBox</string>
    <string name="google_drive">Google Drive</string>
    <string name="make_sure_you_are_connected_to_wifi_and_to_power">Please make sure you are connected to both WIFI and to a power source.</string>
    <string name="no_result_found">Results not found</string>
    <string name="no_thanks">No thanks</string>
    <string name="personal_video_ringtones">Personal Video Ringtones</string>
    <string name="reassign">Reassign</string>
    <string name="search_hint">Search…</string>
    <string name="select_country">Select a country / region</string>
    <string name="share">Share</string>
    <string name="speaker">Speaker</string>
    <string name="we_will_update_you_when_to_backup_process_has_been_completed">If you prefer, the backup can start immediately</string>
    <string name="where_to_backup">Where to Backup</string>
    <string name="with">with</string>
</resources>