<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:id="@id/background" android:background="#99333333" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/foreground" android:background="@drawable/dialog_background_rounded_corners" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="@dimen/dimen_18_dp" android:textStyle="bold" android:id="@id/backupTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/backup_setup" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@id/backupToTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/where_to_backup" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/backupTitle" style="@style/Title.Dialog_title.Small" />
        <RadioGroup android:orientation="horizontal" android:id="@id/backupToGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/backupToTitle">
            <com.callapp.contacts.widget.CallAppRadioButton android:id="@id/dropBoxBackup" android:background="@drawable/ripple_or_holo" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/selector_radio_btn" android:text="@string/dropbox" android:drawableLeft="@drawable/ic_dropbox_64" android:drawablePadding="5.0dip" />
            <com.callapp.contacts.widget.CallAppRadioButton android:id="@id/googleDriveBackup" android:background="@drawable/ripple_or_holo" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:button="@drawable/selector_radio_btn" android:text="@string/google_drive" android:drawableLeft="@drawable/ic_drive_64" android:drawablePadding="5.0dip" />
        </RadioGroup>
        <TextView android:id="@id/fileBackTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/backup_files" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/backupToGroup" style="@style/Title.Dialog_title.Small" />
        <CheckBox android:id="@id/calllogBackup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:checked="true" android:text="@string/call_history" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fileBackTitle" />
        <CheckBox android:id="@id/contactsBackup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:checked="true" android:text="@string/contacts" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/calllogBackup" />
        <CheckBox android:id="@id/ringtoneBackup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/personal_video_ringtones" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/contactsBackup" />
        <CheckBox android:id="@id/recordingBackup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/call_recordings" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ringtoneBackup" />
        <TextView android:id="@id/periodBackup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/backup_period" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/recordingBackup" style="@style/Title.Dialog_title.Small" />
        <RadioGroup android:id="@id/periodGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/periodBackup">
            <com.callapp.contacts.widget.CallAppRadioButton android:id="@id/twoDays" android:background="@drawable/ripple_or_holo" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/selector_radio_btn" android:text="@string/_2_days" />
            <com.callapp.contacts.widget.CallAppRadioButton android:id="@id/twoWeeks" android:background="@drawable/ripple_or_holo" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:button="@drawable/selector_radio_btn" android:text="@string/_14_days" app:layout_constraintTop_toBottomOf="@id/twoDays" />
            <com.callapp.contacts.widget.CallAppRadioButton android:id="@id/month" android:background="@drawable/ripple_or_holo" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:checked="true" android:button="@drawable/selector_radio_btn" android:text="@string/_30_days" app:layout_constraintTop_toBottomOf="@id/twoWeeks" />
        </RadioGroup>
        <TextView android:id="@id/dialog_btn_ok" android:background="@drawable/primary_rounded_rect" android:paddingLeft="16.0dip" android:paddingTop="6.0dip" android:paddingRight="16.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="24.0dip" android:text="@string/doneAllCaps" android:layout_marginEnd="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/periodGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>