<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/audioRouteSpeaker" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speaker" android:drawableStart="@drawable/ic_volume_selector" android:textAlignment="viewStart" style="@style/AudioRouteItem" />
    <TextView android:id="@id/audioRouteEarpiece" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audioroute_phone" android:drawableStart="@drawable/ic_phone_selector" android:textAlignment="viewStart" style="@style/AudioRouteItem" />
    <TextView android:id="@id/audioRouteHeadset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audioroute_headset" android:drawableStart="@drawable/ic_headset_selector" android:textAlignment="viewStart" style="@style/AudioRouteItem" />
</LinearLayout>