<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:id="@id/dialogFrame" android:padding="@dimen/dimen_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/backWifiImage" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/backup_wi_fi_img" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dimen_18_dp" android:textStyle="bold" android:id="@id/backupInfoTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/backup_will_start_soon" android:layout_marginStart="32.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/backWifiImage" />
    <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/backupinfoSubTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/make_sure_you_are_connected_to_wifi_and_to_power" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/backupInfoTitle" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/bkInfoSubtitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/we_will_update_you_when_to_backup_process_has_been_completed" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/backupinfoSubTitle" />
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center" android:id="@id/backupNowBtn" android:background="@drawable/button_rounded_primary_stroke" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/backup_now" android:textAllCaps="true" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/bkInfoSubtitle" />
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white_callapp" android:gravity="center" android:id="@id/backupLaterBtn" android:background="@drawable/primary_rounded_rect" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" android:text="@string/backup_as_scheduled" android:textAllCaps="true" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/backupNowBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>