<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:id="@id/dialogFrame" android:padding="@dimen/dimen_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dimen_18_dp" android:textStyle="bold" android:id="@id/shareVideoTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/can_share_now" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="horizontal" android:id="@id/shareVideoBodyFrame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/shareVideoTitle">
        <ImageView android:id="@id/shareVideoBodyImage" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_10_dp" android:layout_marginRight="@dimen/dimen_10_dp" android:src="@drawable/ic_choose" />
        <TextView android:textSize="@dimen/dimen_14_dp" android:id="@id/shareVideoBody" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/can_share" />
    </LinearLayout>
    <FrameLayout android:id="@id/middleFrame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/shareVideoBodyFrame">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/singleContactShareFrame" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/shareVideoBodyFrame">
            <TextView android:id="@id/contactNameToShare" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10_dp" android:text="@string/with" />
            <com.callapp.contacts.widget.ProfilePictureView android:id="@id/singleContactImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10_dp" android:src="@drawable/contacts_share_d" app:presetSize="overlay" />
            <TextView android:id="@id/infoTexSingle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10_dp" android:text="@string/can_share_friends" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5_dp" android:src="@drawable/contacts_share_d" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/multiContactShareFrame" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:id="@id/carouselTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" />
            <View android:id="@id/dividerTop" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/dimen_2_dp" android:layout_marginBottom="@dimen/dimen_2_dp" />
            <androidx.recyclerview.widget.RecyclerView android:layout_gravity="center" android:id="@id/carouselRecyclerView" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:overScrollMode="never" />
            <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_margin="25.0dip" />
            <View android:id="@id/dividerBottom" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/dimen_2_dp" android:layout_marginBottom="@dimen/dimen_2_dp" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout android:id="@id/rightShareButtonFrame" android:background="@drawable/ripple_or_holo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginEnd="16.0dip" android:layout_alignParentEnd="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/middleFrame">
        <TextView android:textSize="16.0dip" android:textColor="@color/white_callapp" android:gravity="center" android:id="@id/rightShareButton" android:background="@drawable/primary_rounded_rect" android:paddingLeft="@dimen/dimen_10_dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" android:drawableRight="@drawable/ic_share" android:textAllCaps="true" android:textAlignment="center" />
    </FrameLayout>
    <FrameLayout android:id="@id/leftShareButtonFrame" android:background="@drawable/ripple_or_holo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_alignParentEnd="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/middleFrame">
        <TextView android:textSize="12.0dip" android:textColor="@color/text_color" android:gravity="center" android:id="@id/leftShareButton" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_thanks" android:textAllCaps="true" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>